Updated from CodeHS, added gameSpace

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <a class="info" href="info.html">Info<img src="" /></a>
       <a class="info" href="https://github.com/Temponius">More Projects</a>
     </div>
-    <button id="startButton" onclick="playBlackjack(true)">Start Game</button>
+    <div class="gamespace">
+      <button id="startButton" onclick="playBlackjack(true)">Start Game</button>
+    </div>
     <footer class="copyright">
       <p id="copyrightText">Copyright © Brandon C</p>
     </footer>
