Update copyright text in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button id="startButton" onclick="playBlackjack(true)">Start Game</button>
     </div>
     <footer class="copyright">
-      <p id="copyrightText">Copyright © Brandon C</p>
+      <p id="copyrightText">Copyright © temponius 2025</p>
     </footer>
     <script src="script.js"></script>
   </body>
