--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Blackjack Project</h1>
     <div class="infobox">
-      <a class="backButton" href="index.html">Back to Main Page</a>
+      <a class="info" href="index.html">Back to Main Page</a>
     </div>
     <div class="rule">
       <p class="gamerules">To be added</p>
@@ -18,7 +18,7 @@
       />
     </div>
     <footer class="copyright">
-      <p id="copyrightText">Copyright © Brandon C</p>
+      <p id="copyrightText">Copyright © temponius 2025</p>
     </footer>
   </body>
 </html>
